--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pyTelegramBotAPI
-google-genai
-aiohttp
-md2tgmd
-Pillow
+pyTelegramBotAPI==4.27.0
+google-genai==1.18.0
+aiohttp==3.12.7
+md2tgmd==0.3.10
+Pillow==11.2.1
