Ensure English text and remove unused code

--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-# Visual Studio 缓存文件
+# Visual Studio cache files
 
 .vs/
 
