Remove hardcoded system instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,5 @@ services:
       TELEGRAM_BOT_API_KEY: ${TELEGRAM_BOT_API_KEY}
       GEMINI_API_KEYS: ${GEMINI_API_KEYS}
       GEMINI_MODEL: ${GEMINI_MODEL:-gemini-2.5-flash-preview-05-20}
+      # optional
+      SYSTEM_INSTRUCTION: ${SYSTEM_INSTRUCTION}
