--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,5 @@ services:
   bot:
     build: .
     restart: unless-stopped
-    environment:
-      TELEGRAM_BOT_API_KEY: ${TELEGRAM_BOT_API_KEY}
-      GEMINI_API_KEY: ${GEMINI_API_KEY}
-      GEMINI_MODEL: ${GEMINI_MODEL:-gemini-2.5-flash-preview-05-20}
-      # optional
-      SYSTEM_INSTRUCTION: ${SYSTEM_INSTRUCTION}
+    env_file:
+      - .env
