--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-pyTelegramBotAPI==4.27.0
-google-genai==1.18.0
+python-telegram-bot[ext]==22.1
+
+google-genai==1.19.0
+
+pydantic-settings==2.3.4
+
 md2tgmd==0.3.10
-python-dotenv==1.1.0
+
+# python-dotenv is no longer needed
